fixed titles with unnecessary whitespace on top

--- a/src/app/components/verse/verse.component.css
+++ b/src/app/components/verse/verse.component.css
@@ -23,8 +23,11 @@
 h3 {
   font-size: 125%;
   text-align: center;
-  margin-top: 1.5rem;
   margin-bottom: 0.5rem;
+}
+
+h3:not(:first-child) {
+  margin-top: 1.5rem;
 }
 
 .references-block {
